--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,6 +17,7 @@ jobs:
         uses: JamesIves/github-pages-deploy-action@releases/v3
         with:
           branch: gh-pages # The branch the action should deploy to.
-          folder: gh-pages # The folder the action should deploy.
+          # The folder is the gh-pages directory under GITHUB_WORKSPACE
+          folder: ${{ env.GITHUB_WORKSPACE }}/gh-pages # The folder the action should deploy.
           clean: true
           single-commit: true
