--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,6 +18,6 @@ jobs:
         with:
           branch: gh-pages # The branch the action should deploy to.
           # The folder is the gh-pages directory under GITHUB_WORKSPACE
-          folder: ${{ env.GITHUB_WORKSPACE }}/gh-pages # The folder the action should deploy.
+          folder: ${{ github.workspace }}/gh-pages # The folder the action should deploy.
           clean: true
           single-commit: true
