--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,6 +18,7 @@ jobs:
         with:
           branch: gh-pages # The branch the action should deploy to.
           # The folder is the gh-pages directory under GITHUB_WORKSPACE
-          folder: ${{ github.workspace }}/gh-pages # The folder the action should deploy.
+          workspace: ${{ github.workspace }}/gh-pages
+          folder: . # The folder the action should deploy.
           clean: true
           single-commit: true
