--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,10 +14,9 @@ jobs:
           path: gh-pages
           fetch-depth: 0
       - name: "Deploy"
-        uses: JamesIves/github-pages-deploy-action@releases/v3
+        uses: JamesIves/github-pages-deploy-action@v4
         with:
           branch: gh-pages # The branch the action should deploy to.
-          # The folder is the gh-pages directory under GITHUB_WORKSPACE
           workspace: ${{ github.workspace }}/gh-pages
           folder: . # The folder the action should deploy.
           clean: true
