--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,10 +13,17 @@ jobs:
         with:
           path: gh-pages
           fetch-depth: 0
+      - name: "Print paths"
+        run: |
+          echo "PWD: $PWD"
+          echo "GITHUB_WORKSPACE: $GITHUB_WORKSPACE"
+          echo "GITHUB_REPOSITORY: $GITHUB_REPOSITORY"
+          ls -la $PWD
+          ls -la $GITHUB_WORKSPACE
       - name: "Deploy"
         uses: JamesIves/github-pages-deploy-action@v4
         with:
           branch: gh-pages # The branch the action should deploy to.
-          folder: gh-pages # The folder the action should deploy.
+          folder: ./gh-pages # The folder the action should deploy.
           clean: true
           single-commit: true
