--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,9 +21,13 @@ jobs:
           ls -la $PWD
           ls -la $GITHUB_WORKSPACE
       - name: "Deploy"
-        uses: JamesIves/github-pages-deploy-action@v4
-        with:
-          branch: gh-pages # The branch the action should deploy to.
-          folder: ./gh-pages # The folder the action should deploy.
-          clean: true
-          single-commit: true
+        working-directory: gh-pages
+        run: |
+          # Push orphan branch to gh-pages
+          git config user.name "GitHub Actions"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+          git checkout --orphan gh-pages
+          git add .
+          git commit -m "Deploy to GitHub Pages"
+          git push --force --set-upstream origin gh-pages
+          
