--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,19 +13,12 @@ jobs:
         with:
           path: gh-pages
           fetch-depth: 0
-      - name: "Print paths"
-        run: |
-          echo "PWD: $PWD"
-          echo "GITHUB_WORKSPACE: $GITHUB_WORKSPACE"
-          echo "GITHUB_REPOSITORY: $GITHUB_REPOSITORY"
-          ls -la $PWD
-          ls -la $GITHUB_WORKSPACE
       - name: "Deploy"
         working-directory: gh-pages
         run: |
           # Push orphan branch to gh-pages
-          git config --global user.name "GitHub Actions"
-          git config --global user.email "github-actions[bot]@users.noreply.github.com"
+          git config --global user.name "Yiyi Wang"
+          git config --global user.email "yiyi.wang@runtimeverification.com"
           git checkout --orphan gh-pages
           git add .
           git commit -m "Deploy to GitHub Pages"
