--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,7 +19,7 @@ jobs:
           # Push orphan branch to gh-pages
           git config --global user.name "Yiyi Wang"
           git config --global user.email "yiyi.wang@runtimeverification.com"
-          git checkout -b --orphan gh-pages origin/main
+          git checkout --orphan gh-pages origin/main
           git add .
           git commit -m "Deploy to GitHub Pages"
           git push --force --set-upstream origin gh-pages
