--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,6 +23,8 @@ jobs:
           git add .
           git commit -m "Deploy to GitHub Pages"
 
+          git remote -v
           git remote set-url origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git
+          git remote -v
 
           git push --force --set-upstream origin gh-pages
