--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -29,4 +29,4 @@ jobs:
           git remote set-url origin https://${TOKEN}@github.com/${{ github.repository }}
           git remote -v
 
-          git push --force --set-upstream origin gh-pages
+          git push --force origin gh-pages
