--- a/.github/workflows/test-github-output.yml
+++ b/.github/workflows/test-github-output.yml
@@ -10,4 +10,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Print DATABASE_URL
-        run: echo DATABASE_URL=postgresql://xxx:xxx@xxx/postgres?schema=${{ (github.ref == 'refs/heads/master' && 'public') || 'develop' }}&connection_limit=40&pool_timeout=30
+        run: |
+          echo ref: ${{ github.ref }}
+          echo DATABASE_URL=postgresql://xxx:xxx@xxx/postgres?schema=${{ (github.ref == 'refs/heads/master' && 'public') || 'develop' }}&connection_limit=40&pool_timeout=30
