--- a/.github/workflows/test-github-output.yml
+++ b/.github/workflows/test-github-output.yml
@@ -12,4 +12,4 @@ jobs:
       - name: Print DATABASE_URL
         run: |
           echo ref: ${{ github.ref }}
-          echo DATABASE_URL=postgresql://xxx:xxx@xxx/postgres?schema=${{ (github.ref == 'refs/heads/master' && 'public') || 'develop' }}&connection_limit=40&pool_timeout=30
+          echo DATABASE_URL=postgresql://xxx:xxx@xxx/postgres?schema=${{ (github.ref == 'refs/heads/main' && 'public') || 'develop' }}&connection_limit=40&pool_timeout=30
